# ABC

./: .gitignore  .gitlab-ci.yml  README.md  dev.sh  docker-compose.yml  nginx.conf  package-lock.json  run.sh  setup.sh
abc-backend/: .ansible-lint.yml  .dockerignore  .fisv-cookiecutter  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  create_superuser.py  pyproject.toml  start.sh  tests.sh
abc-backend/api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
abc-backend/backend/: settings.py  urls.py
abc-backend/setup/: envrc  pre-commit-hook.sh  setup.sh
abc-backend/setup/templates/: generate_new_job.py  rundeck_job_template.yml
abc-backend/setup/vscode/: settings.json
abc-backend/tasks/: __init__.py  add_pypi_source.sh  build.sh  build_and_run.sh  help.sh  run.sh  run_if_newer_than.sh  tag_versions.py  wait_for.sh
abc-frontend/: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json
abc-frontend/public/: index.html  manifest.json
abc-frontend/src/: App.tsx  constants.ts  index.css  index.tsx
abc-frontend/src/components/: ABCBar.tsx  APIProvider.tsx  BigBox.tsx  ItemList.tsx  LoadingContext.tsx  PageTitle.tsx  ProductProperty.tsx  ProtectedRoute.tsx  StyledLink.tsx  YamlEditor.tsx
abc-frontend/src/pages/: Build.tsx  Home.tsx  Login.tsx  MainLayout.tsx  NotFound.tsx
abc-frontend/src/pages/pe/: EditPattern.tsx  EditProduct.tsx  Pattern.tsx  Product.tsx
backend/: Dockerfile  README.md  create_superuser.py  pyproject.toml
backend/api/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/api/migrations/: 0001_initial.py  0002_schema_delete_note.py  0003_remove_schema_title_schema_name_and_more.py  0004_remove_schema_id_alter_schema_name.py  0005_product.py  0006_remove_product_created_at_remove_product_updated_at.py
backend/backend/: settings.py  urls.py
frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  api.js  api.ts  index.css  index.tsx  transitionDirection.ts
frontend/src/components/: ABCBar.tsx  AdminRoute.tsx  Form.jsx  ItemList.tsx  PageTitle.tsx  ProtectedRoute.jsx  SchemaList.tsx  StyledLink.tsx  YamlEditor.jsx  YamlEditor.tsx
frontend/src/pages/: Build.tsx  Home.tsx  MainLayout.tsx
frontend/src/pages/pe/: EditProduct.tsx  EditSchema.tsx  Home.tsx  Product.tsx  Schema.tsx
nginx/: default.conf
